fixed overflow isses on derp2 class

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -182,7 +182,7 @@ html,
     font-family: "helvetica neue", "Trebuchet MS", "Arial", sans-serif;
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.15);
-    overflow: auto;
+    overflow: hidden;
     min-height: auto;
     margin-top: 14px;
     margin-left: 10px;
@@ -400,14 +400,15 @@ html,
     text-decoration: underline;
   }
 
-  .postimage {
-    min-width: 485px;
+  .postvideo {
+    width: 465px;
     height: 300px;
     margin: 13px;
-    margin-left: 40px;
-    margin-bottom: 22px;
+    margin-left: 69px;
+    margin-bottom: 19px;
     box-shadow: inset 0 0px 5px rgba(0, 0, 0, 0.18);
     z-index: 9997;
+    border: 1px solid lightgrey;
   }
 
   .imagediv {
@@ -556,7 +557,7 @@ html,
     -ms-flex-align: center;
     align-items: center;
     height: 42px;
-    width: 1110px;
+    width: 1210px;
     font-weight: 600px;
     margin: 0;
     margin-left: auto;
